RESOLVED FIXED119187
Inset box-shadows fail to round around corners when border-radius is set in vh/vw units.
https://bugs.webkit.org/show_bug.cgi?id=119187
Summary Inset box-shadows fail to round around corners when border-radius is set in v...
Phil LaPier
Reported 2013-07-27 20:22:35 PDT
Created attachment 207595 [details] Screenshot of the bug The vh and vw units produce different bugs. They both fail to round the inset shadow along the radius of the corner. Non-inset shadows work as expected. View the JSFiddle: http://jsfiddle.net/plapier/cwEAL/
Attachments
Screenshot of the bug (88.05 KB, image/png)
2013-07-27 20:22 PDT, Phil LaPier
no flags
Patch (8.01 KB, patch)
2013-09-23 23:46 PDT, gur.trio
no flags
Patch (14.45 KB, patch)
2013-09-24 22:25 PDT, gur.trio
no flags
Patch (14.45 KB, patch)
2013-09-25 21:26 PDT, gur.trio
no flags
gur.trio
Comment 1 2013-09-23 23:46:17 PDT
gur.trio
Comment 2 2013-09-24 00:37:37 PDT
(In reply to comment #1) > Created an attachment (id=212431) [details] > Patch Hi Darin. Can you please review these changes? Have moved the function viewportPercentageValue of StyleResolver from private to public so that other properties can use it while calculating the viewport lengths.
Darin Adler
Comment 3 2013-09-24 09:08:05 PDT
Comment on attachment 212431 [details] Patch Change looks OK, but I'm not sure there is enough test coverage.
gur.trio
Comment 4 2013-09-24 22:25:43 PDT
Darin Adler
Comment 5 2013-09-25 09:38:14 PDT
Comment on attachment 212539 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=212539&action=review > Source/WebCore/css/StyleResolver.h:314 > + int viewportPercentageValue(CSSPrimitiveValue& unit, int percentage); > struct RuleRange { Why is this grouped together with RuleRange? There should at least be a blank line separating them.
gur.trio
Comment 6 2013-09-25 21:26:29 PDT
gur.trio
Comment 7 2013-09-25 21:27:26 PDT
(In reply to comment #5) > (From update of attachment 212539 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=212539&action=review > > > Source/WebCore/css/StyleResolver.h:314 > > + int viewportPercentageValue(CSSPrimitiveValue& unit, int percentage); > > struct RuleRange { > > Why is this grouped together with RuleRange? There should at least be a blank line separating them. Actually while merging from one workspace to another this issue came. Sorry about that.
WebKit Commit Bot
Comment 8 2013-09-26 09:56:28 PDT
Comment on attachment 212662 [details] Patch Clearing flags on attachment: 212662 Committed r156466: <http://trac.webkit.org/changeset/156466>
WebKit Commit Bot
Comment 9 2013-09-26 09:56:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.