Inset box-shadows fail to round around corners when border-radius is set in vh/vw units. https://bugs.webkit.org/show_bug.cgi?id=119187

Patch by Gurpreet Kaur <k.gurpreet@samsung.com> on 2013-09-26
Reviewed by Darin Adler.

Source/WebCore:

Border-radius properties were not applied incase its values
were given in vh, vw, vmax, vmin units.

Tests: fast/css/border-radius-inset-box-shadow-viewportlength.html
       fast/css/border-radius-viewport-height.html
       fast/css/border-radius-viewport-vmax.html
       fast/css/border-radius-viewport-vmin.html

* css/DeprecatedStyleBuilder.cpp:
(WebCore::ApplyPropertyBorderRadius::applyValue):
(WebCore::ApplyPropertyComputeLength::applyValue):
* css/StyleResolver.h:
Calculating the border-radius values which has been specified
in viewport units.The vh/vw units are calcultated as percent of
viewport height and viewport width respectively. 1vmax: 1vw or 1vh,
whatever is largest.1vmin: 1vw or 1vh, whatever is smallest.

LayoutTests:

* fast/css/border-radius-inset-box-shadow-viewportlength-expected-mismatch.html: Added.
* fast/css/border-radius-inset-box-shadow-viewportlength.html: Added.
* fast/css/border-radius-viewport-height-expected-mismatch.html: Added.
* fast/css/border-radius-viewport-height.html: Added.
* fast/css/border-radius-viewport-vmax-expected-mismatch.html: Added.
* fast/css/border-radius-viewport-vmax.html: Added.
* fast/css/border-radius-viewport-vmin-expected-mismatch.html: Added.
* fast/css/border-radius-viewport-vmin.html: Added.
Added new tests for verifying that box-shadow and border-radius properties
are applied when its values are viewport units.

Canonical link: https://commits.webkit.org/139971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156466 268f45cc-cd09-0410-ab3c-d52691b4dbfc